crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__opaque_reference_expr_with_arguments_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "@Age m n\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            OpaqueName=>OpaqueName@0
            InlineApply=>OpaqueName@0
            Ident=>LowerIdent@1
            InlineApply=>LowerIdent@1
            Ident=>LowerIdent@2
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(OpaqueName("@Age"), [Ident("m"), Ident("n")])

[=== formatted below ===]

