crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__ops_with_newlines_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "3\n+\n\n  4\n"
---
(BeginFile
    (BeginTopLevelDecls
        (* HintExpr Num=>Int@0 InlineBinOpPlus=>OpPlus@1 Num=>Int@2 EndBinOpPlus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("3"), Plus, IntBase10("4"))

[=== formatted below ===]

