crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__ops_with_newlines_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "3\n+\n\n4\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Num=>IntBase10@0
            InlineBinOpPlus=>OpPlus@1
            Num=>IntBase10@2
        EndBinOpPlus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("3"), Plus, IntBase10("4"))

[=== formatted below ===]

